# kum.io

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  compile.sh  index.html  publish.sh
client/src/: data.rs  emscripten_boilerplate.rs  every_tick_thread.rs  frame.rs  game_state.rs  index.html  main.rs  memory_safety_boilerplate.rs  text.rs
client/src/frame/: main.rs  main_game.rs  typing_ip.rs  typing_nick.rs
client/static/: index.html
client/windows/: compile.sh
docs/: index.html  index.js  kum-io-client.js
docs/pkg/: kum_io_client.js  kum_io_client_bg.wasm
server/: Cargo.toml  test.rs
server/src/: config.rs  every_tick_thread.rs  game_state.rs  logging.rs  main.rs  packet_handling.rs
server/src/packet_handling/: chat.rs  debug_game_state.rs  game_state.rs  get_game_state.rs  get_get_game_state.rs  get_get_name.rs  get_name.rs  keep_alive.rs  log_out.rs  mov_backward.rs  mov_forward.rs  mov_left.rs  mov_right.rs  mov_run.rs  move.rs  post_register.rs  register.rs  rotate.rs  run.rs  server_name.rs
src/client/: data.rs  drawing.rs  frame.rs  keep_alive_thread.rs  main.rs
src/client/drawing/: chat.rs  debug_menu.rs  players.rs
src/client/frame/: main_game.rs  typing_ip.rs  typing_nick.rs
src/server/: every_tick_thread.rs  game_state.rs  logging.rs
src/server/packet_handling/: chat.rs  game_state.rs  keep_alive.rs  move.rs  register.rs  rotate.rs
