[package]
name = "kum-io"
version = "0.0.0"
authors = ["Blay"]
license = "GPL-3.0-only"
repository = "https://github.com/Blayung/kum.io"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
sdl2 = { version = "0.35.2", features = ["ttf", "image"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }

tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
axum = "0.6.18"
json5 = "0.4.1"
rand = "0.8.5"
colored = "2.0.0"

serde = { version = "1.0.164", features = ["derive"] }
