[package]
name = "kum-io-client"
version = "0.0.0"
authors = ["Blay"]
license = "GPL-3.0-only"
repository = "https://github.com/Blayung/kum.io"
edition = "2021"

[dependencies]
sdl2 = "0.35.2"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
