[package]
name = "kum-io-server"
version = "0.0.0"
authors = ["Blay"]
license = "GPL-3.0-only"
repository = "https://github.com/Blayung/kum.io"
edition = "2021"

[dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
json5 = "0.4.1"
rand = "0.8.5"
colored = "2.0.0"
